--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -1,9 +1,10 @@
 \section{Problem Description}
+    \addcontentsline{toc}{section}{Poblem Description}
     \label{sec:problem}
     \input{problem}
 
 \clearpage
-   \label{sec:macroeconomics}
+
    \input{macroeconomics}
    
 \clearpage
@@ -11,9 +12,9 @@
     \label{sec:bitcoin}
     \input{bitcoin}
 \clearpage
-\section{Scaling Bitcoin}
-    \label{sec:results}
-%    \input{results}
+
+    \label{sec:scaling}
+    \input{scaling}
 \clearpage
 \section{Lightning Network}
     \label{sec:lightning:network}
