--- a/docs/macroeconomics.tex
+++ b/docs/macroeconomics.tex
@@ -1,5 +1,9 @@
+
 \section{Systems of Trust}
+\addcontentsline{toc}{section}{Macroeconomics}
 \label{sec:macroeconomics}
+
+
 
 Bitcoin was not created in a vacuum and to understand the design of Bitcoin and by extension the Lightning Network one would
 benefit from understanding money and systems of trust. Nakamoto encoded the string "the times 03/jan/2009 chancellor on brink of second bailout for banks"\cite{repository:bitcoin:sourceforge}\cite{bitcoin:genesis:coinbase} in the coinbase transaction of the genesis block as an alleged comment on the current banking system as well as a time stamp. He later cemented this view with multiple forum posts while he was still active\cite{nakamoto:post:deflation}\cite{nakamoto:govern:print}.
@@ -105,18 +109,18 @@ Overall most larger institutions stayed solvent and bank runs is more an excepti
 
 \subsection{Elasticity of money}
 
-It all came crashing down with the outbreak of the first world war. Nations central banks began to issue more notes than gold in reserve to fund the war effort. It effectively ended the gold standard and countries not effected by the war followed shortly after.
+It all came crashing down with the outbreak of the first world war. Nations central banks began to issue more notes than gold in reserve to fund the war effort. It effectively ended the gold standard and countries not affected by the war followed shortly after.
 
 As response the Great Depression U.S President Franklin Roosevelt issued Executive order 6102 confiscating all gold coins, bullion and certificates and banned trade in gold\cite{roosevelt:6102}. The U.S Dollar was devalued the following year from \$20.67 per troy ounce to \$35 under the Gold Reserve Act\cite{gold:reserve:act} to enable spending their way out of recession. 
 
-A new economic era began following ideas of Maynard Keynes of economic interventionism and monetary policies set to aid growth. Keynes rebutted the classical idea that 'supply creates it own demand' and that aggregated demand and aggregated supply may get stuck in an equilibrium with high unemployment\cite{keynes:general:theory}. This would motivate government intervention to increase the aggregated demand. While demand can be altered by a government in multiple ways the far most effective one was altering the money supply\footnote{The increased supply can be used directly by government but is usually used by lowering the funds rate, increasing investments and thus demand. Quantitative easing is another term describing this }. Although the dollar was still technically redeemable for gold the elastic money supply made it possible to steer the economy by means of monetary policy. 
+A new economic era began following ideas of Maynard Keynes of economic interventionism and monetary policies set to aid growth. Keynes rebutted the classical idea that 'supply creates its own demand' and that aggregated demand and aggregated supply may get stuck in an equilibrium with high unemployment\cite{keynes:general:theory}. This would motivate government intervention to increase the aggregated demand. While demand can be altered by a government in multiple ways the far most effective one was altering the money supply\footnote{The increased supply can be used directly by government but is usually used by lowering the funds rate, increasing investments and thus demand. Quantitative easing is another term describing this }. Although the dollar was still technically redeemable for gold the elastic money supply made it possible to steer the economy by means of monetary policy. 
 
 The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon chock\cite{bordo:bretton:woods}. In 1971 Nixon ended the Bretton Woods agreement\cite{bordo:bretton:woods}, the international agreement of exchange rates between currencies, rendering the dollar and all currencies pegged to the Dollar true fiat currencies. After the initial shock the free floating currencies failed to keep pace with gold due to money supply increase causing inflation(Se figure \ref{fig:gold:price:major:currency}).
 
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=16cm]{gold-price.png}
-	\caption{\textit{The relation of major currencies against it's value in gold since the end of the Bretton Woods agreement to
+	\caption{\textit{The relation of major currencies against its value in gold since the end of the Bretton Woods agreement to
 			today. The graph is composed with data from the World Gold Council\cite{world:gold:council}. 
 	}}
 	\label{fig:gold:price:major:currency}
@@ -150,14 +154,14 @@ During the last 250 years hyperinflation\footnote{There is no official definitio
 
 \subsection{Trust}
 
-The economic system build upon fiat currencies are based on the trust in the issuing body not to increase the money supply excessively. It's almost been common knowledge that value is lost in currencies, moving money away from currency and bonds into stock and real estate. Modern currencies have been decoupled from the underlying reasons of it's nascence( see section \ref{sec:characteristics:money}) leading up to the failures of 08 coinciding with Nakamoto's publication completing full circle.
+The economic system built upon fiat currencies are based on the trust in the issuing body not to increase the money supply excessively. It's almost been common knowledge that value is lost in currencies, moving money away from currency and bonds into stock and real estate. Modern currencies have been decoupled from the underlying reasons of its nascence( see section \ref{sec:characteristics:money}) leading up to the failures of 08 coinciding with Nakamoto's publication completing full circle.
 
 \newpage
 \noindent
 \vspace{6cm}
 
 \subsection{Relevancy}
-In many ways it help to think of bitcoin as both a bearer instrument and as a monetary policy and how the system is designed as such. This section is an incomplete view on it's own and for further reading these recommendations are good starting points: 
+In many ways it helps to think of bitcoin as both a bearer instrument and as a monetary policy and how the system is designed as such. This section is an incomplete view on it's own and for further reading these recommendations are good starting points: 
 
 \begin{itemize}
 	\item Nick Szabo's blog Enumerated and above cited Shelling out\cite{szabo:shelling:out}.
