started on proper node

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -19,7 +19,7 @@
 \usepackage{array}
 % \usepackage{upgreek}
 \usepackage{tikz}
-\usepackage{csquotes}
+
 \usepackage{pgfplots}
 \usepackage{svg}
 
@@ -28,6 +28,7 @@
 \lstset{escapeinside={<@}{@>}}
 
 \usepackage[utf8x]{inputenc}
+\usepackage{csquotes}
 \usepackage[T1]{fontenc}
 
 \def\mytitle{Routing Fee Estimation in Lightning Network}
@@ -38,13 +39,13 @@
 \title{\mytitle}
 \def\theauthor{John-John Markstedt}
 \author{John-John Markstedt}
-\supervisor{Oskar Janson}
-\examiner{Henrik Bj\"{o}rklund}
-\semester{VT17}
-\course{5DV097}
-\def\umu{Ume\r{a} University}
-\def\journal{
-    MSc Computing Science and Engineering, \umu{} 2017}
+%\supervisor{Oskar Janson}
+%\examiner{Henrik Bj\"{o}rklund}
+%\semester{VT17}
+%\course{5DV097}
+%\def\umu{Ume\r{a} University}
+%\def\journal{
+%    MSc Computing Science and Engineering, \umu{} 2017}
 
 %\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 
