--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -8,8 +8,6 @@
    \input{macroeconomics}
    
 \clearpage
-\section{The Bitcoin Network}
-    \label{sec:bitcoin}
     \input{bitcoin}
 \clearpage
 
@@ -20,7 +18,8 @@
     \label{sec:lightning:network}
     \input{lightning}
 \clearpage
-\section{Evaluation}
+    \label{sec:evaluation}
+	\input{evaluation}
 \clearpage
 \section{Results}
 \clearpage
