--- a/docs/references.bib
+++ b/docs/references.bib
@@ -210,8 +210,17 @@
 	title = {Bitcoin talk forum post},
 	year = "2010",
 	howpublished = {
-	\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}},
+		\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}},
 	note = {\\(Accessed on 2019-02-04)},
+}
+
+@misc{nakamoto:predicate,
+	author = {Nakamoto, Satoshi},
+	title = {Bitcoin talk forum post},
+	year = "2010",
+	howpublished = {
+		\url{https://bitcointalk.org/index.php?topic=195.msg1611#msg1611}},
+	note = {\\(Accessed on 2019-02-11)},
 }
 
 % Satoshi forum posts
@@ -258,10 +267,10 @@ TOR, reverse govern-print mention
 
 @article{
 	back:hashcash,
-	author = { Back\\, Adam},
-	title = { Hashcash - A Denial of Service Counter-Measure\\ },
+	author = { Back, Adam},
+	title = { Hashcash - A Denial of Service Counter-Measure },
 	year = 2002,
-	howpublished = { http://www.hashcash.org/papers/hashcash.pdf \\},
+	howpublished = { http://www.hashcash.org/papers/hashcash.pdf },
 	issue_date = {a August 2002},
 }
 
@@ -274,8 +283,6 @@ TOR, reverse govern-print mention
 	},
 	note = {\\(Accessed on 2019-02-06)}
 }
-
-
 
 @misc{repository:bitcoin,
 	author = {},
@@ -319,7 +326,7 @@ TOR, reverse govern-print mention
 	author = {},
 	title = {BIP 0141 Segregated Witness},
 	year = "",
-	howpublished = {\\
+	howpublished = {
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0148.mediawiki}},
 	note = {\\(Accessed on 06/11/2018)\\},
 }
@@ -331,7 +338,7 @@ TOR, reverse govern-print mention
 	year = "",
 	howpublished = {
 		\url{https://github.com/bitcoin/bips/blob/master/bip-0147.mediawiki}},
-	note = {\\(Accessed on 2019-02-07)\\},
+	note = {\\(Accessed on 2019-02-07)},
 }
 
 @misc{bip:0016:p2sh,
@@ -342,7 +349,7 @@ TOR, reverse govern-print mention
 	day = "03",
 	howpublished = {
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0016.mediawiki}},
-	note = {\\(Accessed on 2019-02-07)\\},
+	note = {\\(Accessed on 2019-02-07)},
 }
 
 @misc{bip:0013:p2shaddr,
@@ -353,7 +360,7 @@ TOR, reverse govern-print mention
 	day = "03",
 	howpublished = {
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0013.mediawiki}},
-	note = {\\(Accessed on 2019-02-07)\\},
+	note = {\\(Accessed on 2019-02-07)},
 }
 
 @misc{bip,
