--- a/docs/references.bib
+++ b/docs/references.bib
@@ -256,6 +256,18 @@ TOR, reverse govern-print mention
 	isbn = { 1537000454 }
 }
 
+@misc{
+	antonopoulos:bitcoin:scripting,
+	author = {Antonopoulos, Andreas},
+	title = {SF Bitcoin devs seminar: Advanced Bitcoin scripting},
+	year = "2017",
+	month = "April",
+	day = "10",
+	howpublished = {
+		\url{https://www.youtube.com/watch?v=yU3Sr07Qnxg}},
+	}	
+}
+
 @article{
 	nakamoto:bitcoin,
 	author = { Nakamoto, Satoshi},
@@ -272,6 +284,16 @@ TOR, reverse govern-print mention
 	year = 2002,
 	howpublished = { http://www.hashcash.org/papers/hashcash.pdf },
 	issue_date = {a August 2002},
+}
+
+@article{
+	szabo:smart:contracts,
+	author = { Szabo, Nick},
+	title = { Smart Contracts },
+	year = 1994,
+	howpublished = { 
+		\url{http://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo.best.vwh.net/smart.contracts.html}
+	}
 }
 
 @misc{
@@ -372,11 +394,21 @@ TOR, reverse govern-print mention
 	note = {},
 }
 
+% Scaling
+
+@article{poon:dryja:lightning:network,
+	title = {A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels},
+	author = {Decker, Christan and Wattenhofer, Roger},
+	howpublished = { \url{https://www.tik.ee.ethz.ch/file/716b955c130e6c703fac336ea17b1670/duplex-micropayment-channels.pdf} },
+	issue_date = {},
+	publiser = "Distributed Computing Group, ETH Zurich"
+}
+
 % Lightning 
 
-@misc{poon:dryja:lightning:network,
+@article{poon:dryja:lightning:network,
 	title = {The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments},
-	author = {Poon, Joseph; Dryja, Thaddeus},
+	author = {Poon, Joseph and Dryja, Thaddeus},
 	howpublished = { \url{https://lightning.network/lightning-network-paper.pdf} },
 	issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
 	year = 2016,
