--- a/docs/references.bib
+++ b/docs/references.bib
@@ -394,6 +394,7 @@ TOR, reverse govern-print mention
 	note = {},
 }
 
+
 % Scaling
 
 @article{poon:dryja:lightning:network,
@@ -403,6 +404,19 @@ TOR, reverse govern-print mention
 	issue_date = {},
 	publiser = "Distributed Computing Group, ETH Zurich"
 }
+
+
+%scale
+
+@misc{donald:scale,
+	title = {Re: Bitcoin P2P e-cash paper},
+	author = {Donald, James A.},
+	howpublished = { \url{https://www.mail-archive.com/cryptography@metzdowd.com/msg09963.html} },
+	issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
+	year = 2008,
+}
+
+
 
 % Lightning 
 
