--- a/docs/scaling.tex
+++ b/docs/scaling.tex
@@ -1,3 +1,3 @@
 \section{Scaling bitcoin}
 
-There is no secret that the bitcoin blockchain will not be able to scale on its own. 
+There is no secret that the bitcoin blockchain will not be able to scale on its own. When Nakamoto first published the whitepaper on the cryptographic mailing list his first response was in fact that such a solution won't scale very well\cite{donald:scale}.
