--- a/docs/references.bib
+++ b/docs/references.bib
@@ -338,19 +338,20 @@ TOR, reverse govern-print mention
 @misc{bip:0141:segwit,
 	author = {Lombrozo, Eric; Lau, Johnson; Wuille, Pieter},
 	title = {BIP 0141 Segregated Witness},
-	year = "",
-	howpublished = {\\
+	year = "2015",
+	month = "December",
+	howpublished = {
 		\url{https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki}},
-	note = {\\(Accessed on 06/11/2018)\\},
+	note = {(Accessed on 2019-02-13)},
 }
 
 @misc{bip:uasf:segwit,
-	author = {},
-	title = {BIP 0141 Segregated Witness},
-	year = "",
+	author = {Fry, Shaolin},
+	title = {BIP 0148 Mandatory activation of segwit deployment},
+	year = "2017",
 	howpublished = {
-	\url{https://github.com/bitcoin/bips/blob/master/bip-0148.mediawiki}},
-	note = {\\(Accessed on 06/11/2018)\\},
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0148.mediawiki}},
+	note = {(Accessed on 2019-02-13)},
 }
 
 @misc{
@@ -383,6 +384,17 @@ TOR, reverse govern-print mention
 	howpublished = {
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0013.mediawiki}},
 	note = {\\(Accessed on 2019-02-07)},
+}
+
+@misc{bip:0118:sighash:noinput,
+	author = {Decker, Christian},
+	title = "BIP 0013 SIGHASH NOINPUT",
+	year = "2017",
+	month = "February",
+	day = "28",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0118.mediawiki}},
+	note = {\\(Accessed on 2019-02-13)},
 }
 
 @misc{bip,
@@ -482,6 +494,20 @@ year = "",
 	\url{https://github.com/Johnstedt/master-thesis-ln-fee-estimation}},
 	note = {},
 	year = "",
+}
+
+% Topology
+
+@article{
+	barabasi:albert:emergent:scaling,
+	author = {Barabasi, Albert-Lászlo and Albert, Réka},
+	title = "Emergence of Scaling in Random Networks",
+	journal = "Science",
+	volume =  "286",
+	day = "15", 
+	month = "October",
+	year = "1999",
+	page = "509-512"
 }
 
 % Game Theory 
