--- a/docs/references.bib
+++ b/docs/references.bib
@@ -397,6 +397,17 @@ TOR, reverse govern-print mention
 	note = {\\(Accessed on 2019-02-13)},
 }
 
+@misc{bip:0068:sequence:lock:time,
+	author = {Freienbach, Mark and BtcDrak and Dorier, Nicolas and kinoshitajona},
+	title = "BIP 0068 Relative lock-time using consensus-enforced sequence numbers",
+	year = "2015",
+	month = "May",
+	day = "28",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0068.mediawiki}},
+	note = {\\(Accessed on 2019-02-13)},
+}
+
 @misc{bip,
 	author = {},
 	title = {Bitcoin improvement proposals },
@@ -409,14 +420,13 @@ TOR, reverse govern-print mention
 
 % Scaling
 
-@article{poon:dryja:lightning:network,
+@article{decker:wattenhofer:duplex,
 	title = {A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels},
 	author = {Decker, Christan and Wattenhofer, Roger},
 	howpublished = { \url{https://www.tik.ee.ethz.ch/file/716b955c130e6c703fac336ea17b1670/duplex-micropayment-channels.pdf} },
 	issue_date = {},
 	publiser = "Distributed Computing Group, ETH Zurich"
 }
-
 
 %scale
 
