--- a/docs/lightning.tex
+++ b/docs/lightning.tex
@@ -25,7 +25,29 @@ A payment channel is funded by a funding transaction defined in the lightning pa
 	\item  Broadcast the parent on the blockchain
 \end{enumerate}
 
-It is critical that the signatures of the spending transaction is exchanged before the funding transaction otherwise the funds could be held hostage by an uncooperative partner\footnote{This is possible with the \texttt{SIGHASH\_NOINPUT} transaction defined in BIP118\cite{bip:0118:sighash:noinput} which decouples the signature from the specific transaction hash of the output.}. By exchanging the spending transaction first either party could broadcast it to receive the initial funds.
+It is critical that the signatures of the spending transaction is exchanged before the funding transaction otherwise the funds could be held hostage by an uncooperative partner\footnote{This is possible with the \texttt{SIGHASH\_NOINPUT} transaction defined in BIP118\cite{bip:0118:sighash:noinput} which decouples the signature from the specific transaction hash of the output.}. By exchanging the spending transaction first either party could broadcast it to retrieve the initial funds.
+
+\subsubsection{Commitment transaction}
+
+In order for a channel to be useful the creation of a new commitment transaction\footnote{It may be easier to think of this type of transaction as a smart contract, as in this context it's the same thing.}, updating the balance, would need to invalidate the previous one. The previous transaction is after all still a valid bitcoin transaction. This creates a problem since each party would benefit from different commitment transactions being broadcast to the network.
+
+The solution is to construct the commitment transaction similar to that of a fidelity bond where one party would be penalized if violating the agreement. In this case violation is broadcasting any but the latest commitment transactions. To be able to ascribe blame to the violating party the commitment transactions for the same channel state must be unique as otherwise one would not know which party broadcasted the transaction to the network. Only uniqueness is however not enough since there is no way to enforce the penalty for violation. 
+
+The enforcement is possible if revocation is built into the commitment transaction, where the other party could revoke a faulty broadcast. This is possible with the addition of relative block maturity introduced with BIP68\cite{bip:0068:sequence:lock:time}. The commitment transaction has two output paths, one is the other party's funds spendable immediately. The other output has two
+redeemable paths. Either:
+
+\begin{enumerate}
+	\item The broadcasting party can spend the funds after a defined relative block time has passed. Essentially leaving time window for dispute for the violated party to enforce the penalty.
+	\item The non broadcasting party can refute that the commitment transaction is not last signed spending spending the output as penalty.
+\end{enumerate}
+
+Remember that the commitment transactions is reversed for the other party. This type of output which enable revocation is called a Revocable Sequence Maturity Contract(RSMC).
+
+New ct created -> how invalidate works  does time lock need explaining?
+
+
+
+
 
 \subsection{Multihop payments}
 
